Improvements to logic train so peeps can understand the juxtuposition im making from pets and AI

--- a/content/blog/humans-on-the-support-team-in-2026-something-to-solve-for.mdx
+++ b/content/blog/humans-on-the-support-team-in-2026-something-to-solve-for.mdx
@@ -9,7 +9,7 @@ tags: ["saas", "support", "customer-support", "ai", "ai-in-support", "technical-
 <span className="blog-lead-big neon-red">> Why are things changing so dang much?</span>
 </div> 
 
-The <span className="support-team">Support Team</span>'s duties are reactive to the needs of the user. Those needs shift on a daily, weekly, and as we're now experiencing, generational basis. In the mid '90s, <span className="neon-white">Microsoft</span>'s user base exploded by the millions. That's a lot of human bandwidth dedicated to closing the "Where is my 'ANY' key?" tickets. How do you solve for an inundated <span className="support-team">Support Team</span>? <span className="neon-white">Customer self-enablement</span>. Microsoft began publishing FAQs for customers to help themselves. This, now industry standard, shifted the <span className="support-team">Support Team</span>'s responsibilities from <span className="blog-dim">answer every user question</span> to <span className="neon-white">answer every question users can't answer themselves</span>. Sound familiar? <span className="neon-cyan">AI is doing it again.</span>
+The <span className="support-team">Support Team</span>'s duties are reactive to the needs of the user. Those needs shift on a daily, weekly, and as we're now experiencing, generational basis. In the mid '90s <span className="neon-white">Microsoft</span>'s user base exploded by the millions. That's a lot of human bandwidth dedicated to closing the "Where is my 'ANY' key?" tickets. How do you solve for an inundated <span className="support-team">Support Team</span>? <span className="neon-white">Customer self-enablement</span>. Microsoft began publishing FAQs for customers to help themselves. This, now industry standard, shifted the <span className="support-team">Support Team</span>'s responsibilities from <span className="blog-dim">answer every user question</span> to <span className="neon-white">answer every question users can't answer themselves</span>. Sound familiar? <span className="neon-cyan">AI is doing it again.</span>
 
 The difference is that, according to Gartner, by 2029 <span className="blog-dim">(an extremely conservative estimate IMO)</span>, [agentic AI will resolve <span className="neon-cyan underline">80%</span> of incoming customer queries](https://www.gartner.com/en/newsroom/press-releases/2025-03-05-gartner-predicts-agentic-ai-will-autonomously-resolve-80-percent-of-common-customer-service-issues-without-human-intervention-by-20290) without requiring any human bandwidth at all.
 
@@ -37,7 +37,7 @@ So that brings us to...
 <h2 className="neon-cyan">Perceived Accountability</h2>
 
 When an AI assistant tells your dissatisfied client, <span className="blog-dim">"We understand how important this is to you"</span> ... who is "We"? Is it the company dev who plugged in your API Key authorizing the $0.00015–$0.0003 charge per 1,000 tokens outputting a "We Care" pattern-matched statement? It certainly isn't the AI Assistant. It takes a Being capable of the <span className="neon-cyan">Conscious Human Experience</span> to take accountability.
-We haven't yet been able to simulate the conscious human experience and so, neither can we simulate accountability. In 2024, Canadian courts held [Air Canada liable](https://www.americanbar.org/groups/business_law/resources/business-law-today/2024-february/bc-tribunal-confirms-companies-remain-liable-information-provided-ai-chatbot/) after its AI chatbot promised to honor a non-existent refund policy. Legislatively, <span className="neon-white">it appears AI accountability is following the same logic as animal ownership</span>. The difference is that problematic pets can be dealt with in a way meaningful to the <span className="neon-cyan">Conscious Human Experience</span> that satisfies the wronged party. The subtext here is that you cannot hold an AI Assistant personally accountable in any meaningful way to a dissatisfied customer.
+We haven't yet been able to simulate the conscious human experience and so, neither can we simulate accountability. In 2024, Canadian courts held [Air Canada liable](https://www.americanbar.org/groups/business_law/resources/business-law-today/2024-february/bc-tribunal-confirms-companies-remain-liable-information-provided-ai-chatbot/) after its AI chatbot promised to honor a non-existent refund policy. Legislatively, <span className="neon-white">it appears AI accountability is following the same logic as animal ownership</span>. The difference is that problematic pets can be dealt with in a way meaningful to the <span className="neon-cyan">Conscious Human Experience</span> that satisfies the wronged party, and, ostensibly, demands accountability from the owner. In other words, while both are seperate but associated entities, a pet is an accountability-extension while an AI Assistant is merely an accountability-proxy. The subtext here is that you cannot hold an AI Assistant personally accountable in any substantive way to a dissatisfied customer.
 
 On an organizational level, a failure of duties needs to be attributed to someone in a meaningful way that ensures better future outcomes. On a customer relationship level, the customer needs to be able to <span className="neon-purple">feel</span> that there will be meaningful consequences to a failure in duties. AI Assistants, incapable of simulating the <span className="neon-cyan">Conscious Human Experience</span>, rob this attribution of accountability on every level. 
 
@@ -62,6 +62,10 @@ There's a difference between achieving <span className="neon-cyan">a satisfying 
 
 Though... in another universe...
 <span className="neon-red">Initiating: NPS SCORE MAXIMIZATION PROTOCOL</span>
+
+<br />
+
+<span className="blog-callout"> [What is an NPS Score?](https://www.qualtrics.com/articles/customer-experience/net-promoter-score/) </span>
 
 <div className="blog-neon-rule" />
 
